@@ -17,6 +17,8 @@ Changelog
 
 - The rating now again reflects if the long_description isn't valid ReST.
 
+- #38: Recommendations for the License field has changed.
+
 
 2.4 (2018-08-15)
 ----------------
